<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >
    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/midnightblue"
        tools:context=".view.Register"
        >
        <include
            layout="@layout/action_bar"

            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registre_se"
            android:background="@color/midnightblue"
            android:textSize="36sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="80dp"
            />

        <EditText
            android:id="@+id/editNomeRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nome"
            android:textColorHint="@color/midnightblue"
            android:textColor="@color/midnightblue"
            android:background="@color/white"
            android:maxLines="1"
            android:inputType="text"
            android:gravity="center"
            android:padding="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:drawableEnd="@drawable/icon_person"
            />

        <EditText
            android:id="@+id/editEmailRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColorHint="@color/midnightblue"
            android:textColor="@color/midnightblue"
            android:background="@color/white"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:gravity="center"
            android:padding="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:drawableEnd="@drawable/icon_email"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/editSenhaRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/senha"
            android:textColorHint="@color/midnightblue"
            android:textColor="@color/midnightblue"
            android:background="@color/white"
            android:maxLines="1"
            android:inputType="numberPassword"
            android:gravity="center"
            android:padding="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:drawableEnd="@drawable/icon_eye"
            />

        <Button
            android:id="@+id/btLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text = "@string/cadastrar"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:backgroundTint="@color/alizarin"
            android:padding="15dp"
            app:cornerRadius="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="10dp"
            />
    </LinearLayout>
</ScrollView>