<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:theme="@style/Theme.SplashScreenTheme"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/midnightblue"
        android:orientation="vertical"
        tools:context=".view.Login">

        <include
            layout="@layout/action_bar"
            />

        <TextView
            android:id="@+id/btRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:backgroundTint="@color/alizarin"
            android:gravity="center"
            android:text="@string/recuperando_senha"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/editEmailRecovery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColorHint="@color/midnightblue"
            android:textColor="@color/midnightblue"
            android:background="@color/white"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:gravity="center"
            android:padding="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:drawableEnd="@drawable/icon_email"
            tools:ignore="TextFields" />

        <Button
            android:id="@+id/btRecovery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text = "@string/enviar"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:backgroundTint="@color/alizarin"
            android:padding="15dp"
            app:cornerRadius="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="10dp"
            />
    </LinearLayout>
</ScrollView>