<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/midnightblue"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".view.Login">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/midnightblue"
            android:gravity="center"
            android:text="@string/barber_shop"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/logobarber1" />

        <EditText
            android:id="@+id/editNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:background="@color/white"
            android:drawableRight="@drawable/icon_person"
            android:gravity="center"
            android:hint="Nome"
            android:inputType="text"
            android:maxLines="1"
            android:padding="15dp"
            android:textColor="@color/midnightblue"
            android:textColorHint="@color/midnightblue" />

        <EditText
            android:id="@+id/editSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:background="@color/white"
            android:drawableRight="@drawable/icon_eye"
            android:gravity="center"
            android:hint="Senha"
            android:inputType="numberPassword"
            android:maxLines="1"
            android:padding="15dp"
            android:textColor="@color/midnightblue"
            android:textColorHint="@color/midnightblue" />

        <Button
            android:id="@+id/btLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/alizarin"
            android:padding="15dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:cornerRadius="15dp" />

        <!--        <ProgressBar-->
        <!--            android:id="@+id/progressBar"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginBottom="20dp"-->
        <!--            android:layout_marginTop="20dp"-->
        <!--            />-->

        <TextView
            android:id="@+id/btRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/alizarin"
            android:gravity="center"
            android:text="@string/crie_sua_conta"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold"
            >

        </TextView>
    </LinearLayout>
</ScrollView>